<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>dev.zerep</groupId>
    <artifactId>ZeAuctionHouse</artifactId>
    <version>3.3.2</version>
    <packaging>jar</packaging>

    <name>ZeAuctionHouse</name>
    <description>Stable, secure, scalable AuctionHouse for Paper 1.21.1+</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
    </properties>

    <repositories>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.21.1-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.47.1.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>5.1.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.33</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <build>
        <defaultGoal>clean package</defaultGoal>
        <finalName>${project.artifactId}-${project.version}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals><goal>shade</goal></goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <minimizeJar>true</minimizeJar>
                            <filters>
                                <!-- Strip signing metadata -->
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                                <!--
                                  SQLite JDBC bundles native .so/.dylib/.dll for every OS.
                                  Minecraft servers run on Linux — exclude Mac, Windows,
                                  FreeBSD and 32-bit ARM to save ~5-6 MB.
                                  Kept: Linux/x86_64, Linux/aarch64, Linux/arm64
                                -->
                                <filter>
                                    <artifact>org.xerial:sqlite-jdbc</artifact>
                                    <excludes>
                                        <exclude>org/sqlite/native/Mac/**</exclude>
                                        <exclude>org/sqlite/native/Windows/**</exclude>
                                        <exclude>org/sqlite/native/FreeBSD/**</exclude>
                                        <exclude>org/sqlite/native/Linux/android-arm/**</exclude>
                                        <exclude>org/sqlite/native/Linux/arm/**</exclude>
                                        <exclude>org/sqlite/native/Linux/armv6/**</exclude>
                                        <exclude>org/sqlite/native/Linux/armv7/**</exclude>
                                        <exclude>org/sqlite/native/Linux/ppc64/**</exclude>
                                        <exclude>org/sqlite/native/Linux/musl-x86_64/**</exclude>
                                        <exclude>org/sqlite/native/Linux/musl-aarch64/**</exclude>
                                        <exclude>org/sqlite/native/Linux/riscv64/**</exclude>
                                    </excludes>
                                </filter>
                                <!-- MySQL: exclude bundled protobuf/google libs (minimizeJar handles most) -->
                                <filter>
                                    <artifact>mysql:mysql-connector-java</artifact>
                                    <excludes>
                                        <exclude>com/google/**</exclude>
                                        <exclude>google/**</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            <relocations>
                                <relocation>
                                    <pattern>org.sqlite</pattern>
                                    <shadedPattern>dev.zerep.zeah.libs.sqlite</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>com.zaxxer.hikari</pattern>
                                    <shadedPattern>dev.zerep.zeah.libs.hikari</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>com.mysql</pattern>
                                    <shadedPattern>dev.zerep.zeah.libs.mysql</shadedPattern>
                                </relocation>
                            </relocations>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>
</project>
